import old content

--- a/index.html
+++ b/index.html
@@ -5,10 +5,8 @@ image: meta-preview.png
 ---
 
 <h1 id="welcome">
-  Hey hi, I’m <yeet>Melody</yeet> ~
+  Hey hi, I’m <yeet>Melody</yeet>!
 </h1>
-
-{% include construction.html %}
 
 <p class="lead">
   I’m an interactive web developer, designer, and storyteller. <br class="hidden-phone"> Here's a taste of what I do →
@@ -47,4 +45,61 @@ image: meta-preview.png
 <br>
 <hr>
 
-This site is open source!
+
+<h2 id="welcome">
+  {% include icons/welcome.svg size="42" %}
+  Hey hi, I'm <yeet>Melody Starling!</yeet>
+</h2>
+
+<p class="lead">
+  I'm a sparkly code unicorn who makes art, websites, and tea! <br> Let's build something cool together.
+</p>
+
+<p>
+  My pronouns are <a class="duo" href="/they">plural they/them</a>. Nice to meet you!
+</p>
+
+<p>
+  Find me on <a class="uno" href="https://twitter.com/pixelyunicorn" target="_blank"><img src="https://icon.now.sh/twitter/1da1f2" height="12" width="12" /> Twitter</a>, <a class="uno" href="https://github.com/pixelyunicorn" target="_blank"><img src="https://icon.now.sh/github/000" height="12" width="12" /> GitHub</a>, <a class="uno" href="https://dribbble.com/pixelyunicorn" target="_blank"><img src="https://icon.now.sh/dribbble/ea4c89" height="12" width="12" /> Dribbble</a>, and <a class="uno" href="https://twitch.tv/pixelysquid" target="_blank"><img src="https://icon.now.sh/twitch/6441a5" height="12" width="12" /> Twitch</a>.
+</p>
+
+<hr>
+
+<h2 id="about">
+  {% include icons/emoji.svg size="42" %}
+  Here's a lil' <yeet>about me:</yeet>
+</h2>
+
+<p>
+  I consider myself to be a jack of all trades, but master of none. My experience is an odd trail mix between:
+</p>
+
+<ul>
+  <li>Web Development!</li>
+  <li>UI/UX Design!</li>
+  <li>Community Management!</li>
+  <li>Esports!</li>
+</ul>
+
+<p>
+  My current affiliations are:
+</p>
+
+<ul>
+  <li><a href="https://srnd.org/" target="_blank" class="uno"><img src="https://2018.melody.cool/media/stickers/codeday.png" alt="CodeDay Philly logo" style="max-height:1em" /> srnd.org</a>, CodeDay Philly &amp; NYC organizer</li>
+  <li><a href="https://tacojs.github.io" target="_blank" class="uno"><img src="https://2018.melody.cool/media/stickers/tacojs.png" alt="TacoJS logo" style="max-height:1em" /> TacoJS</a>, lead organizer (on hiatus)</li>
+  <li><a href="http://septayac.com" target="_blank" class="uno"><img src="https://2018.melody.cool/media/stickers/septa.png" alt="SEPTA logo" style="max-height:.8em;vertical-align:baseline" /> SEPTA Youth Advisory Council</a>, tech and equity advisor</li>
+  <li><a href="https://twitter.com/hrgesports" target="_blank" class="uno"><img src="https://2018.melody.cool/media/stickers/hrg.png" alt="HRG logo" style="max-height:1em" /> Hormone Replacement Gaming</a>, pro~fresh~ional <a href="https://twitter.com/pixelysquid" target="_blank" class="uno"><img src="https://2018.melody.cool/media/stickers/squid.png" alt="Splatoon squid" style="max-height:1em; transform:rotate(22deg)" /> Splatoon 2</a> player</li>
+</ul>
+
+<p>
+  <strong>Let's build something cool together!</strong> The best way to get in touch with me is thru Twitter DMs. You can also send an email to hi at this domain!
+</p>
+
+<hr>
+
+<p>
+  PS This site was built on a <a href="https://www.twitch.tv/videos/386750942" target="_blank" class="uno">livestream</a> with <a href="https://glitch.com/~melody" target="_blank" class="uno">Glitch</a> and <a href="https://glitch.com/~jekyll-starter" target="_blank" class="uno">jekyll-starter</a>.
+</p>
+
+<br>
