--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ image: meta-preview.png
 ---
 
 <h1 id="welcome">
-  Hey hi, I’m <yeet>Melody</yeet>!
+  {% include icons/welcome.svg size="64" %} Hey hi, I’m <yeet>Melody</yeet>!
 </h1>
 
 <p class="lead">
@@ -43,32 +43,21 @@ image: meta-preview.png
 </blogroll>
 
 <br>
-<hr>
-
-
-<h2 id="welcome">
-  {% include icons/welcome.svg size="42" %}
-  Hey hi, I'm <yeet>Melody Starling!</yeet>
-</h2>
-
-<p class="lead">
-  I'm a sparkly code unicorn who makes art, websites, and tea! <br> Let's build something cool together.
-</p>
-
-<p>
-  My pronouns are <a class="duo" href="/they">plural they/them</a>. Nice to meet you!
-</p>
-
-<p>
-  Find me on <a class="uno" href="https://twitter.com/pixelyunicorn" target="_blank"><img src="https://icon.now.sh/twitter/1da1f2" height="12" width="12" /> Twitter</a>, <a class="uno" href="https://github.com/pixelyunicorn" target="_blank"><img src="https://icon.now.sh/github/000" height="12" width="12" /> GitHub</a>, <a class="uno" href="https://dribbble.com/pixelyunicorn" target="_blank"><img src="https://icon.now.sh/dribbble/ea4c89" height="12" width="12" /> Dribbble</a>, and <a class="uno" href="https://twitch.tv/pixelysquid" target="_blank"><img src="https://icon.now.sh/twitch/6441a5" height="12" width="12" /> Twitch</a>.
-</p>
 
 <hr>
 
 <h2 id="about">
-  {% include icons/emoji.svg size="42" %}
+  {% include icons/emoji.svg size="38" %}
   Here's a lil' <yeet>about me:</yeet>
 </h2>
+
+<p>
+  My pronouns are <a class="uno" href="/they">plural they/them</a>. Nice to meet you!
+</p>
+
+<p>
+  You can find me on <a class="uno" href="https://twitter.com/pixelyunicorn" target="_blank"><img src="https://icon.now.sh/twitter/1da1f2" height="12" width="12" /> Twitter</a>, <a class="uno" href="https://github.com/pixelyunicorn" target="_blank"><img src="https://icon.now.sh/github/000" height="12" width="12" /> GitHub</a>, <a class="uno" href="https://dribbble.com/pixelyunicorn" target="_blank"><img src="https://icon.now.sh/dribbble/ea4c89" height="12" width="12" /> Dribbble</a>, and <a class="uno" href="https://twitch.tv/pixelysquid" target="_blank"><img src="https://icon.now.sh/twitch/6441a5" height="12" width="12" /> Twitch</a>.
+</p>
 
 <p>
   I consider myself to be a jack of all trades, but master of none. My experience is an odd trail mix between:
@@ -82,7 +71,7 @@ image: meta-preview.png
 </ul>
 
 <p>
-  My current affiliations are:
+  I also do jawns with:
 </p>
 
 <ul>
