--- a/index.html
+++ b/index.html
@@ -14,16 +14,37 @@ image: meta-preview.png
 
 {% assign sorted_posts = site.posts | sort: "tile.order" %}
 
+<style>
+{% capture tiles_style %}
+@import "variables";
+@import "mixins";
+
+{% for post in sorted_posts %}{% unless post.hidden %}
+  #tile-{{ post.slug }} {
+    grid-column: auto / span calc({{ post.tile.width }} + 1 {% if post.tile.left %}+ {{ post.tile.left }}{% endif %});
+    grid-row: auto / span calc({{ post.tile.height }} + 1 {% if post.tile.top %}+ {{ post.tile.top}}{% endif %});
+    {% if post.tile.left %}margin-left: calc(40px * {{ post.tile.left }});{% endif %}
+    {% if post.tile.top %}margin-top: calc(40px * {{ post.tile.top }});{% endif %}
+    {% if post.tile.image %}background-image: url({{ post.tile.image | prepend: post.url }}); background-size: cover; background-position: center;{% endif %}
+    cursor: pointer;
+    h3 span {
+      background-image: linear-gradient(to right, transparent 50%, lighten({{ post.accent }}, 15%) 90%);
+    }
+    @include media-query(1095px) {
+      grid-column: auto / span 7;
+      grid-row: auto / span 7;
+      margin-left: 0;
+      margin-top: 0;
+    }
+  }
+{% endunless %}{% endfor %}{% endcapture %}
+{{ tiles_style | scssify }}
+</style>
+
 <tiles class="hidden-phone">
   {% for post in sorted_posts %}{% unless post.hidden %}
-    <a href="{{ post.url }}" class="tile bg-{{ post.accent }} {{ post.tile.class }}" style="
-      grid-column: auto / span calc({{ post.tile.width }} + 1 {% if post.tile.left %}+ {{ post.tile.left }}{% endif %});
-      grid-row: auto / span calc({{ post.tile.height }} + 1 {% if post.tile.top %}+ {{ post.tile.top}}{% endif %});
-      {% if post.tile.left %}margin-left: calc(40px * {{ post.tile.left }});{% endif %}
-      {% if post.tile.top %}margin-top: calc(40px * {{ post.tile.top }});{% endif %}
-      {% if post.tile.image %}background-image: url({{ post.tile.image | prepend: post.url }}); background-size: cover; background-position: center;{% endif %} cursor: pointer;">
-      <h3><span title="{{ post.title }}" style="background-image: linear-gradient(to right, transparent 50%, {{ post.accent }} 90%);
-      ">{{ post.title }}</span></h3>
+    <a href="{{ post.url }}" id="tile-{{ post.slug }}" class="tile bg-{{ post.accent }} {{ post.tile.class }}">
+      <h3><span title="{{ post.title }}">{{ post.title }}</span></h3>
     </a>
   {% endunless %}{% endfor %}
 </tiles>
