--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@ image: meta-preview.png
 <hr>
 
 <p>
-  PS This site is open source on <a href="https://github.com/{{ site.github }}" target="_blank" class="uno">GitHub</a> and <a href="https://glitch.com/~{{ site.glitch }}" target="_blank" class="uno">Glitch</a>! There's also a <a href="https://www.twitch.tv/videos/386750942" target="_blank" class="uno">livestream</a> you can watch of myself building this site.
+  PS This site is open source on <a href="https://github.com/{{ site.github }}" target="_blank" class="uno">GitHub</a>/<a href="https://glitch.com/~{{ site.glitch }}" target="_blank" class="uno">Glitch</a> and built on a <a href="https://www.twitch.tv/videos/386750942" target="_blank" class="uno">livestream</a>!
 </p>
 
 <br>
