conditional glitch github twitch icons based on theme

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@ image: meta-preview.png
 </p>
 
 <p>
-  You can find me on <a class="uno" href="https://twitter.com/pixelyunicorn" target="_blank"><img src="https://icon.now.sh/twitter/1da1f2" height="12" width="12" /> Twitter</a>, <a class="uno" href="https://github.com/pixelyunicorn" target="_blank"><img src="https://icon.now.sh/github/000" height="12" width="12" /> GitHub</a>, <a class="uno" href="https://dribbble.com/pixelyunicorn" target="_blank"><img src="https://icon.now.sh/dribbble/ea4c89" height="12" width="12" /> Dribbble</a>, and <a class="uno" href="https://twitch.tv/pixelysquid" target="_blank"><img src="https://icon.now.sh/twitch/6441a5" height="12" width="12" /> Twitch</a>.
+  You can find me on <a class="uno" href="https://twitter.com/pixelyunicorn" target="_blank"><img src="https://icon.now.sh/twitter/1da1f2" height="12" width="12" /> Twitter</a>, <a class="uno" href="https://github.com/pixelyunicorn" target="_blank"><img src="https://icon.now.sh/github/000" class="visible-theme-light" height="12" width="12" /><img src="https://icon.now.sh/github/fff" class="visible-theme-dark" height="12" width="12" /> GitHub</a>, <a class="uno" href="https://dribbble.com/pixelyunicorn" target="_blank"><img src="https://icon.now.sh/dribbble/ea4c89" height="12" width="12" /> Dribbble</a>, and <a class="uno" href="https://twitch.tv/pixelysquid" target="_blank"><img src="https://icon.now.sh/twitch/6441a5" class="visible-theme-light" height="14" width="14" /><img src="https://icon.now.sh/twitch/b9a3e3" class="visible-theme-dark" height="14" width="14" /> Twitch</a>.
 </p>
 
 <p>
