retagaroo all the thangssssssss

--- a/index.html
+++ b/index.html
@@ -65,7 +65,13 @@ image: meta-preview.png
   {% endunless %}{% endfor %}
 </blogroll>
 
-<br>
+<p><em>
+  Filter by:
+  <a class="uno" href="/hashtag/dev">#dev</a>
+  <a class="uno" href="/hashtag/design">#design</a>
+  <a class="uno" href="/hashtag/talks">#talks</a>
+  <a class="uno" href="/hashtag/guides">#guides</a>
+</em></p>
 
 <hr>
 
