Respectfully beg for money

--- a/index.html
+++ b/index.html
@@ -89,25 +89,18 @@ image: meta-preview.png
 </p>
 
 <p>
-  I consider myself to be a jack of all trades, but master of none. My experience is an odd trail mix between:
+  I also have a <a class="uno" href="https://github.com/pixelyunicorn" target="_blank"><img src="https://c5.patreon.com/external/favicon/favicon-16x16.png?v=69kMELnXkB" height="12" width="12" /> Patreon</a> where you can support the work I do and get early access to my posts!
 </p>
-
-<ul>
-  <li>Web Development!</li>
-  <li>UI/UX Design!</li>
-  <li>Community Management!</li>
-  <li>Esports!</li>
-</ul>
 
 <p>
-  I also do jawns with:
+  I currently do jawns with:
 </p>
 
 <ul>
-  <li><a href="https://srnd.org/" target="_blank" class="uno"><img src="https://2018.melody.cool/media/stickers/codeday.png" alt="CodeDay Philly logo" style="max-height:1em" /> srnd.org</a>, CodeDay Philly &amp; NYC organizer</li>
-  <li><a href="https://tacojs.github.io" target="_blank" class="uno"><img src="https://2018.melody.cool/media/stickers/tacojs.png" alt="TacoJS logo" style="max-height:1em" /> TacoJS</a>, lead organizer (on hiatus)</li>
-  <li><a href="http://septayac.com" target="_blank" class="uno"><img src="https://2018.melody.cool/media/stickers/septa.png" alt="SEPTA logo" style="max-height:.8em;vertical-align:baseline" /> SEPTA Youth Advisory Council</a>, tech and equity advisor</li>
-  <li><a href="https://twitter.com/hrgesports" target="_blank" class="uno"><img src="https://2018.melody.cool/media/stickers/hrg.png" alt="HRG logo" style="max-height:1em" /> Hormone Replacement Gaming</a>, pro~fresh~ional <a href="https://twitter.com/pixelysquid" target="_blank" class="uno"><img src="https://2018.melody.cool/media/stickers/squid.png" alt="Splatoon squid" style="max-height:1em; transform:rotate(22deg)" /> Splatoon 2</a> player</li>
+  <li><a href="https://srnd.org/" target="_blank" class="uno"><img src="https://2018.melody.cool/media/stickers/codeday.png" alt="CodeDay Philly logo" style="max-height:1em" /> srnd.org</a>, as CodeDay Philly &amp; NYC's lead organizer.</li>
+  <li><a href="https://tacojs.github.io" target="_blank" class="uno"><img src="https://2018.melody.cool/media/stickers/tacojs.png" alt="TacoJS logo" style="max-height:1em" /> TacoJS</a> (on hiatus), as a lead organizer.</li>
+  <li><a href="http://septayac.com" target="_blank" class="uno"><img src="https://2018.melody.cool/media/stickers/septa.png" alt="SEPTA logo" style="max-height:.8em;vertical-align:baseline" /> SEPTA Youth Advisory Council</a>, as the tech and equity advisor.</li>
+  <li><a href="https://twitter.com/hrgesports" target="_blank" class="uno"><img src="https://2018.melody.cool/media/stickers/hrg.png" alt="HRG logo" style="max-height:1em" /> Hormone Replacement Gaming</a>, as a pro~fresh~ional <a href="https://twitter.com/pixelysquid" target="_blank" class="uno"><img src="https://2018.melody.cool/media/stickers/squid.png" alt="Splatoon squid" style="max-height:1em; transform:rotate(22deg)" /> Splatoon 2</a> player.</li>
 </ul>
 
 <p>
