--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@ image: meta-preview.png
 </p>
 
 <p>
-  I also have a <a class="uno" href="https://github.com/pixelyunicorn" target="_blank"><img src="https://c5.patreon.com/external/favicon/favicon-16x16.png?v=69kMELnXkB" height="12" width="12" /> Patreon</a> where you can support the work I do and get early access to my posts!
+  Thank you to my friends on <a class="uno" href="https://patreon.com/madebymelody" target="_blank"><img src="https://c5.patreon.com/external/favicon/favicon-16x16.png?v=69kMELnXkB" height="12" width="12" /> Patreon</a> for supporting me in the things I do!
 </p>
 
 <p>
