--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ image: meta-preview.png
 ---
 
 <h1 id="welcome">
-  <span class="hidden-phone">{% include icons/welcome.svg size="64" %}</span> Hey hi, I’m <yeet>Melody</yeet>!
+  <span class="hidden-phone">{% include icons/welcome.svg size="64" %}</span> Hey hi, I’m <yeet>Melody</yeet>!!
 </h1>
 
 <p class="lead">
