no recruiters thx

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@ image: meta-preview.png
 </ul>
 
 <p>
-  <strong>Let's build something cool together!</strong> The best way to get in touch with me is thru Twitter DMs. You can also send an email to hi at this domain!
+  <strong>Let's build something cool together!</strong> The best way to get in touch with me is thru Twitter DMs. You can also send an email to hi at this domain! (No recruiters.)
 </p>
 
 <hr>
