redo the about section like the cool kids

--- a/index.html
+++ b/index.html
@@ -87,36 +87,36 @@ image: meta-preview.png
 </h2>
 
 <p>
-  My pronouns are <a class="uno" href="/they">plural they/them</a>. Nice to meet you!
+  Nice to meet you! I'm a 🦄 web unicorn, 🍵 tea witch, 🥑 advotaco!
+  <br>
+  My pronouns are <a class="uno" href="/they">plural they/them</a>.
 </p>
 
 <p>
-  You can find me on <a class="uno" href="https://twitter.com/pixelyunicorn" target="_blank"><img src="https://icon.now.sh/twitter/1da1f2" height="12" width="12" /> Twitter</a>, <a class="uno" href="https://github.com/pixelyunicorn" target="_blank"><img src="https://icon.now.sh/github/000" class="visible-theme-light" height="12" width="12" /><img src="https://icon.now.sh/github/fff" class="visible-theme-dark" height="12" width="12" /> GitHub</a>, <a class="uno" href="https://dribbble.com/pixelyunicorn" target="_blank"><img src="https://icon.now.sh/dribbble/ea4c89" height="12" width="12" /> Dribbble</a>, and <a class="uno" href="https://twitch.tv/pixelysquid" target="_blank"><img src="https://icon.now.sh/twitch/6441a5" class="visible-theme-light" height="14" width="14" /><img src="https://icon.now.sh/twitch/b9a3e3" class="visible-theme-dark" height="14" width="14" /> Twitch</a>.
+  You can find me on
+  <a class="uno" href="https://twitter.com/pixelyunicorn" target="_blank"><img src="https://icon.now.sh/twitter/1da1f2" height="14" width="14" /> Twitter</a>,
+  <a class="uno" href="https://github.com/pixelyunicorn" target="_blank"><img src="https://icon.now.sh/github/000" class="visible-theme-light" height="14" width="14" /><img src="https://icon.now.sh/github/fff" class="visible-theme-dark" height="14" width="14" /> GitHub</a>,
+  <a class="uno" href="https://dribbble.com/pixelyunicorn" target="_blank"><img src="https://icon.now.sh/dribbble/ea4c89" height="14" width="14" /> Dribbble</a>, and
+  <a class="uno" href="https://twitch.tv/pixelysquid" target="_blank"><img src="https://icon.now.sh/twitch/6441a5" class="visible-theme-light" height="14" width="14" /><img src="https://icon.now.sh/twitch/b9a3e3" class="visible-theme-dark" height="14" width="14" /> Twitch</a>.
 </p>
 
 <p>
-  Thank you to my friends on <a class="uno" href="https://patreon.com/madebymelody" target="_blank"><img src="https://c5.patreon.com/external/favicon/favicon-16x16.png?v=69kMELnXkB" height="12" width="12" /> Patreon</a> for supporting me in the things I do!
+  I also recently launched a <a class="uno" href="https://patreon.com/madebymelody" target="_blank"><img src="https://c5.patreon.com/external/favicon/favicon-16x16.png?v=69kMELnXkB" height="12" width="12" /> Patreon</a> where you can support my work!
 </p>
 
-<p>
-  I currently do jawns with:
-</p>
-
-<ul>
-  <li><a href="https://srnd.org/" target="_blank" class="uno"><img src="https://2018.melody.cool/media/stickers/codeday.png" alt="CodeDay Philly logo" style="max-height:1em" /> srnd.org</a>, as CodeDay Philly &amp; NYC's lead organizer.</li>
-  <li><a href="https://tacojs.github.io" target="_blank" class="uno"><img src="https://2018.melody.cool/media/stickers/tacojs.png" alt="TacoJS logo" style="max-height:1em" /> TacoJS</a> (on hiatus), as a lead organizer.</li>
-  <li><a href="http://septayac.com" target="_blank" class="uno"><img src="https://2018.melody.cool/media/stickers/septa.png" alt="SEPTA logo" style="max-height:.8em;vertical-align:baseline" /> SEPTA Youth Advisory Council</a>, as the tech and equity advisor.</li>
-  <li><a href="https://twitter.com/hrgesports" target="_blank" class="uno"><img src="https://2018.melody.cool/media/stickers/hrg.png" alt="HRG logo" style="max-height:1em" /> Hormone Replacement Gaming</a>, as a pro~fresh~ional <a href="https://twitter.com/pixelysquid" target="_blank" class="uno"><img src="https://2018.melody.cool/media/stickers/squid.png" alt="Splatoon squid" style="max-height:1em; transform:rotate(22deg)" /> Splatoon 2</a> player.</li>
-</ul>
+<h2>
+  {% include icons/briefcase.svg size="38" %}
+  Let's build something <yeet>cool</yeet> together!
+</h2>
 
 <p>
-  <strong>Let's build something cool together!</strong> The best way to get in touch with me is thru Twitter DMs. You can also send an email to hi at this domain! (No recruiters.)
+  <strong></strong> I am currently available for full time paid work in devrel or webdev. The best way to get in touch with me is thru Twitter DMs. You can also send an email to <yeet>hi</yeet> at <yeet>this domain</yeet>! (No recruiters, thanks!)
 </p>
 
 <hr>
 
 <p>
-  PS This site is open source on <a href="https://github.com/{{ site.github }}" target="_blank" class="uno">GitHub</a>/<a href="https://glitch.com/~{{ site.glitch }}" target="_blank" class="uno">Glitch</a> and built on a <a href="https://www.twitch.tv/videos/386750942" target="_blank" class="uno">livestream</a>!
+  This site is open source on <a href="https://github.com/{{ site.github }}" target="_blank" class="uno"><img src="https://icon.now.sh/github/000" class="visible-theme-light" height="14" width="14" /><img src="https://icon.now.sh/github/fff" class="visible-theme-dark" height="14" width="14" /> GitHub</a>/<a href="https://glitch.com/~{{ site.glitch }}" target="_blank" class="uno"><img src="https://cdn.glitch.com/2bdfb3f8-05ef-4035-a06e-2043962a3a13%2Flogo-day.svg" class="visible-theme-light" height="14" width="18"/><img src="https://cdn.glitch.com/2bdfb3f8-05ef-4035-a06e-2043962a3a13%2Flogo-night.svg" class="visible-theme-dark" height="14" width="18"/> Glitch</a> and built on a <a href="https://www.twitch.tv/videos/386750942" target="_blank" class="uno">livestream</a>!
 </p>
 
 <br>
