update asset paths

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@ image: meta-preview.png
 <hr>
 
 <p>
-  This site is open source on <a href="https://github.com/{{ site.github }}" target="_blank" class="uno"><img src="https://icon.now.sh/github/000" class="visible-theme-light" height="14" width="14" /><img src="https://icon.now.sh/github/fff" class="visible-theme-dark" height="14" width="14" /> GitHub</a>/<a href="https://glitch.com/~{{ site.glitch }}" target="_blank" class="uno"><img src="https://cdn.glitch.com/2bdfb3f8-05ef-4035-a06e-2043962a3a13%2Flogo-day.svg" class="visible-theme-light" height="14" width="18"/><img src="https://cdn.glitch.com/2bdfb3f8-05ef-4035-a06e-2043962a3a13%2Flogo-night.svg" class="visible-theme-dark" height="14" width="18"/> Glitch</a> and built on a <a href="https://www.twitch.tv/videos/386750942" target="_blank" class="uno">livestream</a>!
+  This site is open source on <a href="https://github.com/{{ site.github }}" target="_blank" class="uno"><img src="https://icon.now.sh/github/000" class="visible-theme-light" height="14" width="14" /><img src="https://icon.now.sh/github/fff" class="visible-theme-dark" height="14" width="14" /> GitHub</a>/<a href="https://glitch.com/~{{ site.glitch }}" target="_blank" class="uno"><img src="https://cdn.glitch.com/2bdfb3f8-05ef-4035-a06e-2043962a3a13/logo-day.svg" class="visible-theme-light" height="14" width="18"/><img src="https://cdn.glitch.com/2bdfb3f8-05ef-4035-a06e-2043962a3a13/logo-night.svg" class="visible-theme-dark" height="14" width="18"/> Glitch</a> and built on a <a href="https://www.twitch.tv/videos/386750942" target="_blank" class="uno">livestream</a>!
 </p>
 
 <br>
