--- a/index.html
+++ b/index.html
@@ -71,13 +71,19 @@ image: meta-preview.png
   {% endunless %}{% endfor %}
 </blogroll>
 
-<p><em>
+<p>
+  Additional case studies:
+  <a class="uno" href="/septa">SEPTA System Status</a>,
+  <a class="uno" href="/temple">Temple University</a>,
+  <a class="uno" href="/bitcamp">Bitcamp Design</a>
+  <!-- <a class="uno" href="/tacojs">TacoJS Meetup</a> -->
+  <br><br>
   Filter by:
   <a class="uno" href="/hashtag/dev">#dev</a>
   <a class="uno" href="/hashtag/design">#design</a>
   <a class="uno" href="/hashtag/talks">#talks</a>
   <a class="uno" href="/hashtag/guides">#guides</a>
-</em></p>
+</p>
 
 <hr>
 
