a11y in alt text

--- a/index.html
+++ b/index.html
@@ -94,14 +94,14 @@ image: meta-preview.png
 
 <p>
   You can find me on
-  <a class="uno" href="https://twitter.com/pixelyunicorn" target="_blank"><img src="https://icon.now.sh/twitter/1da1f2" height="14" width="14" /> Twitter</a>,
-  <a class="uno" href="https://github.com/pixelyunicorn" target="_blank"><img src="https://icon.now.sh/github/000" class="visible-theme-light" height="14" width="14" /><img src="https://icon.now.sh/github/fff" class="visible-theme-dark" height="14" width="14" /> GitHub</a>,
-  <a class="uno" href="https://dribbble.com/pixelyunicorn" target="_blank"><img src="https://icon.now.sh/dribbble/ea4c89" height="14" width="14" /> Dribbble</a>, and
-  <a class="uno" href="https://twitch.tv/pixelysquid" target="_blank"><img src="https://icon.now.sh/twitch/6441a5" class="visible-theme-light" height="14" width="14" /><img src="https://icon.now.sh/twitch/b9a3e3" class="visible-theme-dark" height="14" width="14" /> Twitch</a>.
+  <a class="uno" href="https://twitter.com/pixelyunicorn" target="_blank"><img role="presentation" src="https://icon.now.sh/twitter/1da1f2" height="14" width="14" /> Twitter</a>,
+  <a class="uno" href="https://github.com/pixelyunicorn" target="_blank"><img role="presentation" src="https://icon.now.sh/github/000" class="visible-theme-light" height="14" width="14" /><img role="presentation" src="https://icon.now.sh/github/fff" class="visible-theme-dark" height="14" width="14" /> GitHub</a>,
+  <a class="uno" href="https://dribbble.com/pixelyunicorn" target="_blank"><img role="presentation" src="https://icon.now.sh/dribbble/ea4c89" height="14" width="14" /> Dribbble</a>, and
+  <a class="uno" href="https://twitch.tv/pixelysquid" target="_blank"><img role="presentation" src="https://icon.now.sh/twitch/6441a5" class="visible-theme-light" height="14" width="14" /><img role="presentation" src="https://icon.now.sh/twitch/b9a3e3" class="visible-theme-dark" height="14" width="14" /> Twitch</a>.
 </p>
 
 <p>
-  I also recently launched a <a class="uno" href="https://patreon.com/madebymelody" target="_blank"><img src="https://c5.patreon.com/external/favicon/favicon-16x16.png?v=69kMELnXkB" height="12" width="12" /> Patreon</a> where you can support my work!
+  I also recently launched a <a class="uno" href="https://patreon.com/madebymelody" target="_blank"><img role="presentation" src="https://c5.patreon.com/external/favicon/favicon-16x16.png?v=69kMELnXkB" height="12" width="12" /> Patreon</a> where you can support my work!
 </p>
 
 <h2>
@@ -116,7 +116,7 @@ image: meta-preview.png
 <hr>
 
 <p>
-  This site is open source on <a href="https://github.com/{{ site.github }}" target="_blank" class="uno"><img src="https://icon.now.sh/github/000" class="visible-theme-light" height="14" width="14" /><img src="https://icon.now.sh/github/fff" class="visible-theme-dark" height="14" width="14" /> GitHub</a>/<a href="https://glitch.com/~{{ site.glitch }}" target="_blank" class="uno"><img src="https://cdn.glitch.com/2bdfb3f8-05ef-4035-a06e-2043962a3a13/logo-day.svg" class="visible-theme-light" height="14" width="18"/><img src="https://cdn.glitch.com/2bdfb3f8-05ef-4035-a06e-2043962a3a13/logo-night.svg" class="visible-theme-dark" height="14" width="18"/> Glitch</a> and built on a <a href="https://www.twitch.tv/videos/386750942" target="_blank" class="uno">livestream</a>!
+  This site is open source on <a href="https://github.com/{{ site.github }}" target="_blank" class="uno"><img role="presentation" src="https://icon.now.sh/github/000" class="visible-theme-light" height="14" width="14" /><img role="presentation" src="https://icon.now.sh/github/fff" class="visible-theme-dark" height="14" width="14" /> GitHub</a>/<a href="https://glitch.com/~{{ site.glitch }}" target="_blank" class="uno"><img role="presentation" src="https://cdn.glitch.com/2bdfb3f8-05ef-4035-a06e-2043962a3a13/logo-day.svg" class="visible-theme-light" height="14" width="18"/><img role="presentation" src="https://cdn.glitch.com/2bdfb3f8-05ef-4035-a06e-2043962a3a13/logo-night.svg" class="visible-theme-dark" height="14" width="18"/> Glitch</a> and built on a <a href="https://www.twitch.tv/videos/386750942" target="_blank" class="uno">livestream</a>!
 </p>
 
 <br>
