Revert "reduce all external requests, maybe better performance?"
This reverts commit 1161e8f29a8408e9cf2523875b9742a8d3824912.

--- a/index.html
+++ b/index.html
@@ -94,14 +94,14 @@ image: meta-preview.png
 
 <p>
   You can find me on
-  <a class="uno" href="https://twitter.com/pixelyunicorn" target="_blank" rel="noreferrer">{% include social/twitter.svg size="14" %} Twitter</a>,
-  <a class="uno" href="https://github.com/pixelyunicorn" target="_blank" rel="noreferrer"><span class="visible-theme-light">{% include social/github.svg size="14" %}</span><span class="visible-theme-dark">{% include social/github-white.svg size="14" %}</span> GitHub</a>,
-  <a class="uno" href="https://dribbble.com/pixelyunicorn" target="_blank" rel="noreferrer">{% include social/dribbble.svg size="14" %} Dribbble</a>, and
-  <a class="uno" href="https://twitch.tv/pixelysquid" target="_blank" rel="noreferrer"><span class="visible-theme-light">{% include social/twitch.svg size="14" %}</span><span class="visible-theme-dark">{% include social/twitch-white.svg size="14" %}</span> Twitch</a>.
+  <a class="uno" href="https://twitter.com/pixelyunicorn" target="_blank" rel="noreferrer"><img role="presentation" src="https://icon.now.sh/twitter/1da1f2" height="14" width="14" /> Twitter</a>,
+  <a class="uno" href="https://github.com/pixelyunicorn" target="_blank" rel="noreferrer"><img role="presentation" src="https://icon.now.sh/github/000" class="visible-theme-light" height="14" width="14" /><img role="presentation" src="https://icon.now.sh/github/fff" class="visible-theme-dark" height="14" width="14" /> GitHub</a>,
+  <a class="uno" href="https://dribbble.com/pixelyunicorn" target="_blank" rel="noreferrer"><img role="presentation" src="https://icon.now.sh/dribbble/ea4c89" height="14" width="14" /> Dribbble</a>, and
+  <a class="uno" href="https://twitch.tv/pixelysquid" target="_blank" rel="noreferrer"><img role="presentation" src="https://icon.now.sh/twitch/6441a5" class="visible-theme-light" height="14" width="14" /><img role="presentation" src="https://icon.now.sh/twitch/b9a3e3" class="visible-theme-dark" height="14" width="14" /> Twitch</a>.
 </p>
 
 <p>
-  I also recently launched a <a class="uno" href="https://patreon.com/madebymelody" target="_blank" rel="noreferrer"><img role="presentation" src="https://cdn.glitch.com/2d246102-8341-4166-a220-b39d607c9218/icon-patreon.png" height="12" width="12" /> Patreon</a> where you can support my work!
+  I also recently launched a <a class="uno" href="https://patreon.com/madebymelody" target="_blank" rel="noreferrer"><img role="presentation" src="https://c5.patreon.com/external/favicon/favicon-16x16.png?v=69kMELnXkB" height="12" width="12" /> Patreon</a> where you can support my work!
 </p>
 
 <h2>
@@ -116,10 +116,7 @@ image: meta-preview.png
 <hr>
 
 <p>
-  This site is open source on
-  <a href="https://github.com/{{ site.github }}" target="_blank" rel="noreferrer" class="uno"><span class="visible-theme-light">{% include social/github.svg size="14" %}</span><span class="visible-theme-dark">{% include social/github-white.svg size="14" %}</span> GitHub</a>
-  /
-  <a href="https://glitch.com/~{{ site.glitch }}" target="_blank" rel="noreferrer" class="uno"><img role="presentation" src="https://cdn.glitch.com/2bdfb3f8-05ef-4035-a06e-2043962a3a13/logo-day.svg" class="visible-theme-light" height="14" width="18"/><img role="presentation" src="https://cdn.glitch.com/2bdfb3f8-05ef-4035-a06e-2043962a3a13/logo-night.svg" class="visible-theme-dark" height="14" width="18"/> Glitch</a> and built on a <a href="https://www.twitch.tv/videos/386750942" target="_blank" rel="noreferrer" class="uno">livestream</a>!
+  This site is open source on <a href="https://github.com/{{ site.github }}" target="_blank" rel="noreferrer" class="uno"><img role="presentation" src="https://icon.now.sh/github/000" class="visible-theme-light" height="14" width="14" /><img role="presentation" src="https://icon.now.sh/github/fff" class="visible-theme-dark" height="14" width="14" /> GitHub</a>/<a href="https://glitch.com/~{{ site.glitch }}" target="_blank" rel="noreferrer" class="uno"><img role="presentation" src="https://cdn.glitch.com/2bdfb3f8-05ef-4035-a06e-2043962a3a13/logo-day.svg" class="visible-theme-light" height="14" width="18"/><img role="presentation" src="https://cdn.glitch.com/2bdfb3f8-05ef-4035-a06e-2043962a3a13/logo-night.svg" class="visible-theme-dark" height="14" width="18"/> Glitch</a> and built on a <a href="https://www.twitch.tv/videos/386750942" target="_blank" rel="noreferrer" class="uno">livestream</a>!
 </p>
 
 <br>
